--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                                     <rect key="frame" x="20" y="45" width="51" height="25"/>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="updateHighLightView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rzl-aW-kcv"/>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DOJ-Bm-KnR"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gh-43-0kz">
@@ -78,6 +78,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="70" width="61" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nk2-hB-Nbz"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqe-Ok-DM7">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -90,6 +93,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="95" width="76" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GNd-GB-xAL"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yih-w3-nqm">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -102,6 +108,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="120" width="158" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rqy-Ba-Rsi"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H0x-vH-IoR" userLabel="Bottom_bar">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -158,7 +167,7 @@
                                                     <rect key="frame" x="20" y="39" width="83" height="25"/>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="updateHighLightView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="srP-YK-NnN"/>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j0C-v3-dlK"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iv2-X5-PNu" userLabel="Bottom_bar">
@@ -209,6 +218,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="47" width="44" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QbM-kV-XCv"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UR-r7-2Su">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -221,6 +233,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="72" width="44" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xdH-9o-u2w"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="27L-c7-stm">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -234,7 +249,7 @@
                                                     <rect key="frame" x="20" y="97" width="113" height="25"/>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="updateHighLightView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HoD-eW-DAK"/>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K5o-98-c0I"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="waS-0t-cP4">
@@ -248,6 +263,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="122" width="90" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dji-2I-LUW"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="25" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldP-57-Nno">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -260,6 +278,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="147" width="71" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Az-PW-Ugh"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ecP-zZ-Zpd" userLabel="Bottom_bar">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -317,6 +338,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="64" width="115" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nm1-pr-Htp"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCR-Lr-GfV">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -329,6 +353,9 @@
                                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                     <rect key="frame" x="20" y="89" width="150" height="25"/>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9nh-gs-OKs"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Goe-aI-NmT" userLabel="Bottom_bar">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -349,7 +376,7 @@
                                                     <rect key="frame" x="16" y="39" width="158" height="25"/>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="updateHighLightView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="81z-UU-4Xg"/>
+                                                    <action selector="tapSideMenuButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IPC-1o-ygC"/>
                                                 </connections>
                                             </button>
                                         </subviews>
