--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -744,12 +744,13 @@
         <!--Emb Data View Controller-->
         <scene sceneID="ev1-lP-VlW">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="Fwv-9V-5Qf" customClass="embDataViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="embDataViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Fwv-9V-5Qf" customClass="embDataViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="f5e-Fx-rLa"/>
                         <viewControllerLayoutGuide type="bottom" id="od3-EW-7ld"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4zz-tW-Nhz">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -760,6 +761,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CfE-KR-wXS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-436.5" y="1055.25"/>
+        </scene>
+        <!--Supporting View Controller-->
+        <scene sceneID="PYk-Va-9Qe">
+            <objects>
+                <viewController storyboardIdentifier="SupportingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yZN-md-K3C" customClass="SupportingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GEC-kk-ei0"/>
+                        <viewControllerLayoutGuide type="bottom" id="EMa-ed-dTS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XTl-kU-ZoR">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GF3-Ud-htb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
